// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoToTopLink snapshot renders with size 1`] = `
<a
  className="jsx-3248159136"
  href="#top"
  title="Scroll to the top of the page"
>
  <span
    className="jsx-3248159136 visually-hidden"
  >
    Scroll to the top of the page
  </span>
  <svg
    aria-hidden="true"
    className="jsx-3248159136 svgIcon"
    fill="#0e1007"
    focusable="false"
    height="42"
    viewBox="0 0 256 256"
    width="42"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      className="jsx-3248159136"
      fill="none"
      height="256"
      width="256"
    />
    <circle
      className="jsx-3248159136 stroke"
      cx="128"
      cy="128"
      fill="none"
      r="96"
      stroke="#0e1007"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
    <polyline
      className="jsx-3248159136 stroke"
      fill="none"
      points="96 168 128 136 160 168"
      stroke="#0e1007"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
    <polyline
      className="jsx-3248159136 stroke"
      fill="none"
      points="96 112 128 80 160 112"
      stroke="#0e1007"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
  </svg>
</a>
`;

exports[`GoToTopLink snapshot renders without size 1`] = `
<a
  className="jsx-3248159136"
  href="#top"
  title="Scroll to the top of the page"
>
  <span
    className="jsx-3248159136 visually-hidden"
  >
    Scroll to the top of the page
  </span>
  <svg
    aria-hidden="true"
    className="jsx-3248159136 svgIcon"
    fill="#0e1007"
    focusable="false"
    height="35"
    viewBox="0 0 256 256"
    width="35"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      className="jsx-3248159136"
      fill="none"
      height="256"
      width="256"
    />
    <circle
      className="jsx-3248159136 stroke"
      cx="128"
      cy="128"
      fill="none"
      r="96"
      stroke="#0e1007"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
    <polyline
      className="jsx-3248159136 stroke"
      fill="none"
      points="96 168 128 136 160 168"
      stroke="#0e1007"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
    <polyline
      className="jsx-3248159136 stroke"
      fill="none"
      points="96 112 128 80 160 112"
      stroke="#0e1007"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
  </svg>
</a>
`;
